login, signup implemented and file restructured
login, signup implemented and file restructured

--- a/src/games/quiz_trademark/tradesecret-quiz.html
+++ b/src/games/quiz_trademark/tradesecret-quiz.html
@@ -32,9 +32,10 @@
         </div>
         <button id="submit">Next</button>
       </div>
+
       <div id="game">
-        <a href="/tradesecret.html">
-          <button class="b"><h1>Finish</h1></button>
+        <a href="../../trademark/trademark.html">
+          <button class="b"><h1>Exit</h1></button>
         </a>
       </div>
     </section>
