--- a/src/games/wordsearch/Copyright-wordsearch.html
+++ b/src/games/wordsearch/Copyright-wordsearch.html
@@ -89,7 +89,7 @@
     </script>
 
     <div id="game">
-        <a href="/copyright.html">
+        <a href="../../copyright/copyright.html">
             <button class="b"><h1>Finish</h1></button>
         </a>
     </div>
