--- a/src/homepage/homepage.html
+++ b/src/homepage/homepage.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="css/Homepage.css" rel="stylesheet" />
+    <link href="homepage.css" rel="stylesheet" />
     <title>Homepage</title>
   </head>
 
@@ -30,7 +30,7 @@
 
             <li><a href="#">Categories</a></li>
           </ul>
-          <a class="btn" href="login.html" style="color: aliceblue">Sign Out</a>
+          <a class="btn" href="../../index.html" style="color: aliceblue">Sign Out</a>
         </nav>
 
         <!-- <img src="images/menu.png" class="menu-icon" /> -->
@@ -50,7 +50,7 @@
           <!-- <button type="button">Explore</button> -->
         </div>
         <div class="col">
-          <a href="trademark.html">
+          <a href="../trademark/trademark.html">
             <div class="card1">
               <!-- <h5>
               <a href="trademark.html">
@@ -59,17 +59,17 @@
             </h5> -->
             </div>
           </a>
-          <a href="patent.html">
+          <a href="../patent/patent.html">
             <div class="card2">
               <h5></h5>
             </div>
           </a>
-          <a href="copyright.html">
+          <a href="../copyright/copyright.html">
             <div class="card3">
               <h5></h5>
             </div>
           </a>
-          <a href="tradesecret.html">
+          <a href="../tradesecret/tradesecret.html">
             <div class="card4">
               <h5></h5>
             </div>
@@ -78,6 +78,6 @@
       </div>
     </div>
 
-    <script src="script/homepage.js"></script>
+    <script src="homepage.js"></script>
   </body>
 </html>
