--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gaming Website</title>
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <!-- <nav>
@@ -26,7 +26,7 @@
     </div>
 
     <div class="play">
-      <a href="login.html">GET STARTED</a>
+      <a href="src/auth/auth.html">GET STARTED</a>
     </div>
 
     <div class="card">
