--- a/src/games/crossword/patent-crossword.html
+++ b/src/games/crossword/patent-crossword.html
@@ -19,7 +19,7 @@
 
         font-family: Arial, Helvetica, sans-serif;
         /* background: rgba(0, 0, 0, 0.3) url("/images/2.ji"); */
-        background-image: url("/games/crossword/2.jfif");
+        background-image: url("2.jfif");
         background-blend-mode: darken;
         background-size: cover;
         height: 100vh;
@@ -119,7 +119,7 @@
       <!-- crossword puzzle appended here -->
     </div>
     <div id="game">
-      <a href="/patent.html">
+      <a href="../../patent/patent.html">
         <button class="b"><h1>Finish</h1></button>
       </a>
     </div>
