--- a/src/games/quiz/tradesecret-quiz.html
+++ b/src/games/quiz/tradesecret-quiz.html
@@ -32,10 +32,9 @@
         </div>
         <button id="submit">Next</button>
       </div>
-
       <div id="game">
-        <a href="/trademark.html">
-          <button class="b"><h1>Exit</h1></button>
+        <a href="../../tradesecret/tradesecret.html">
+          <button class="b"><h1>Finish</h1></button>
         </a>
       </div>
     </section>
