--- a/src/trademark/trademark.html
+++ b/src/trademark/trademark.html
@@ -47,6 +47,9 @@
                 <a href="../games/quiz_trademark/tradesecret-quiz.html">
                     <button type="button">Quiz</button>
                 </a>
+                <a href="../games/logoquiz/logoGame.html">
+                    <button type="button">Logo Game</button>
+                </a>
             </div>
             <div class="col">
                 <div class="card"><iframe width="560" height="315"
