--- a/src/homepage/homepage.html
+++ b/src/homepage/homepage.html
@@ -30,6 +30,7 @@
 
             <li><a href="#">Categories</a></li>
           </ul>
+          <a class="btn" href="../scoreboard/scoreboard.html" style="color: aliceblue">Leaderboard</a>
           <a class="btn" href="../../index.html" style="color: aliceblue">Sign Out</a>
         </nav>
 
