--- a/src/scoreboard/scoreboard.html
+++ b/src/scoreboard/scoreboard.html
@@ -19,7 +19,7 @@
             </a>
             <ul>
                 <li><a href="../homepage/homepage.html">HOME</a></li>
-                <li><a href="#">ABOUT</a></li>
+                <li><a href="#">About</a></li>
                 <li><a href="#">Categories</a></li>
             </ul>
             <a class="btn" href="../../index.html" style="color: aliceblue">Sign Out</a>
