--- a/src/homepage/homepage.html
+++ b/src/homepage/homepage.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-
   <div class="container">
     <div class="navbar">
       <header>
@@ -17,21 +16,28 @@
           <h2><span>IPowerUp</span></h2>
           <div class="dropdown">
             <a href="homepage.html" class="home">Home</a>
-
-
-            <div class="dropdown">
-              <button onclick="myFunction()" class="dropbtn">Categories</button>
-              <div id="myDropdown" class="dropdown-content">
-                <a href="../patent/patent.html">Patent</a>
-                <a href="../copyright/copyright.html">Copyright</a>
-                <a href="../trademark/trademark.html">Trademarks</a>
-                <a href="../tradesecret/tradesecret.html">Trade Secrets</a>
-              </div>
+          </div>
+          <div class="dropdown">
+            <button class="dropbtn">Categories</button>
+            <div class="dropdown-content">
+              <a href="../patent/patent.html">Patent</a>
+              <a href="../copyright/copyright.html">Copyright</a>
+              <a href="../trademark/trademark.html">Trademarks</a>
+              <a href="../tradesecret/tradesecret.html">Trade Secrets</a>
             </div>
-            <a href="#">Games</a>
-            <a class="btn1" href="../scoreboard/scoreboard.html"
-              style="color: aliceblue; font-size:20px ;">Leaderboard</a>
-            <a class="btn" href="../../index.html" style="color: aliceblue;  font-size:20px ;">Sign Out</a>
+          </div>
+          <div class="dropdown">
+            <button class="dropbtn">Games</button>
+            <div class="dropdown-content">
+              <a href="../games/quiz_trademark/tradesecret-quiz.html">Trademark Quiz</a>
+              <a href="../games/quiz/tradesecret-quiz.html">Tradesecret Quiz</a>
+              <a href="../games/logoquiz/logoGame.html">Guess the Logo</a>
+              <a href="../games/crossword/patent-crossword.html">Crossword</a>
+              <a href="../games/wordsearch/Copyright-wordsearch.html">Wordsearch</a>
+            </div>
+          </div>
+          <a class="btn1" href="../scoreboard/scoreboard.html">Leaderboard</a>
+          <a class="btn" href="../../index.html">Sign Out</a>
         </nav>
       </header>
     </div>
