--- a/src/copyright/copyright.html
+++ b/src/copyright/copyright.html
@@ -48,10 +48,7 @@
           Authorship (OWA).Not all types of work can be copyrighted. A
           copyright does not protect ideas, discoveries, concepts, or
           theories. Brand names, logos, slogans, domain names, and titles also
-          cannot be protected under copyright law. For an original work to be
-          copyrighted, it has to be in tangible form.This means that any
-          speech, discoveries, musical scores, or ideas have to be written
-          down in physical form in order to be protected by copyright.
+          cannot be protected under copyright law. 
         </p>
         <a href="../games/wordsearch/Copyright-wordsearch.html">
           <button type="button">WordSearch</button>
