--- a/src/tradesecret/tradesecret.html
+++ b/src/tradesecret/tradesecret.html
@@ -49,13 +49,7 @@
           provides value to customers. As confidential information (as trade
           secrets are known in some jurisdictions), trade secrets are the
           "classified documents" of the business world, just as top-secret
-          documents are closely guarded by government agencies. There are many
-          examples of trade secrets that are tangible and intangible. For
-          example, Google's search algorithm exists as intellectual property
-          in code and is regularly uThe secret formula for Coca-Cola, which is
-          locked in a vault, is an example of a trade secret that is a formula
-          or recipe. Since it has not been patented, it has never been
-          revealed.
+          documents are closely guarded by government agencies.
         </p>
         <a href="../games/quiz/tradesecret-quiz.html">
           <button type="button">Quiz</button>
