--- a/src/homepage/homepage.html
+++ b/src/homepage/homepage.html
@@ -44,6 +44,7 @@
 
     <div class="row">
       <div class="col col1">
+        <div class="blur">
         <h1 class="ip-title"><span>Intellectual property</span></h1>
 
         <p class="ip-desc">
@@ -54,6 +55,7 @@
           and trade secrets.
         </p>
         <!-- <button type="button">Explore</button> -->
+    </div>
       </div>
       <div class="col">
         <a href="../trademark/trademark.html">
