quiz_tradesecret dynamic
quiz_tradesecret dynamic meaning questions are taken from firebase and score is stored in firebase

--- a/src/games/quiz/tradesecret-quiz.html
+++ b/src/games/quiz/tradesecret-quiz.html
@@ -38,6 +38,6 @@
         </a>
       </div>
     </section>
-    <script src="tradesecret-quiz.js"></script>
+    <script type="module" src="tradesecret-quiz.js"></script>
   </body>
 </html>
