--- a/src/copyright/copyright.html
+++ b/src/copyright/copyright.html
@@ -19,7 +19,6 @@
         <ul>
           <li><a href="../homepage/homepage.html">HOME</a></li>
           <li><a href="#">ABOUT</a></li>
-
           <li><a href="#">Categories</a></li>
         </ul>
         <a class="btn" href="../../index.html" style="color: aliceblue">Sign Out</a>
@@ -56,9 +55,24 @@
         <a href="../games/wordsearch/Copyright-wordsearch.html">
           <button type="button">WordSearch</button>
         </a>
+        <div class="button-group">
+
+          <button type="button">Quiz</button>
+          <button type="button">Learn More</button>
+        </div>
       </div>
       <div class="col">
+
+        <div class="sliding-facts">
+          <span class="nav-arrow" id="prev">&lt;</span>
+          <p id="fact">Fact 1: Copyright lasts the author's lifetime plus 70 years.</p>
+          <span class="nav-arrow" id="next">&gt;</span>
+        </div>
+
+
         <div class="card">
+
+
           <iframe width="560" height="315" src="https://www.youtube.com/embed/eEB5MYcj-Ns?si=qOE8pxjuFLRJFeyq"
             title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -66,7 +80,11 @@
         </div>
       </div>
     </div>
+
   </div>
+  </div>
+
+  <script src="copyright.js"></script>
 </body>
 
 </html>
