--- a/src/copyright/copyright.html
+++ b/src/copyright/copyright.html
@@ -57,7 +57,9 @@
         </a>
         <div class="button-group">
 
-          <button type="button">Quiz</button>
+          <a href="../games/quiz/quiz.html?type=copyright">
+            <button type="button">Copyright Quiz</button>
+          </a>
           <button type="button">Learn More</button>
         </div>
       </div>
