--- a/src/games/quiz/quiz.html
+++ b/src/games/quiz/quiz.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="tradesecret-quiz.css" />
+    <link rel="stylesheet" href="quiz.css" />
   </head>
 
   <body>
@@ -32,13 +32,12 @@
         </div>
         <button id="submit">Next</button>
       </div>
-
       <div id="game">
-        <a href="../../trademark/trademark.html">
-          <button class="b"><h1>Exit</h1></button>
+        <a href="../../tradesecret/tradesecret.html">
+          <button class="b"><h1>Finish</h1></button>
         </a>
       </div>
     </section>
-    <script src="tradesecret-quiz.js"></script>
+    <script type="module" src="quiz.js"></script>
   </body>
 </html>
