--- a/src/trademark/trademark.html
+++ b/src/trademark/trademark.html
@@ -60,9 +60,9 @@
                     They can be corporate logos, slogans, bands, or the brand name of a product.
                 </p>
                 &nbsp;
-                <a href="../games/quiz_trademark/tradesecret-quiz.html">
-                    <button type="button">Quiz</button>
-                </a>
+                <a href="../games/quiz/quiz.html?type=trademark">
+                    <button type="button">Trademark Quiz</button>
+                  </a>
                 <a href="../games/logoquiz/logoGame.html">
                     <button type="button">Logo Game</button>
                 </a>
