--- a/src/tradesecret/tradesecret.html
+++ b/src/tradesecret/tradesecret.html
@@ -57,8 +57,8 @@
           or recipe. Since it has not been patented, it has never been
           revealed.
         </p>
-        <a href="../games/quiz/tradesecret-quiz.html">
-          <button type="button">Quiz</button>
+        <a href="../games/quiz/quiz.html?type=tradesecret">
+          <button type="button">Tradesecret Quiz</button>
         </a>
       </div>
       <div class="col">
