--- a/src/copyright/copyright.html
+++ b/src/copyright/copyright.html
@@ -52,7 +52,7 @@
           speech, discoveries, musical scores, or ideas have to be written
           down in physical form in order to be protected by copyright.
         </p>
-        <a href="../games/wordsearch/Copyright-wordsearch.html">
+        <a href="../games/wordsearch/WordSearch.html?type=copyright">
           <button type="button">WordSearch</button>
         </a>
         <div class="button-group">
