--- a/src/trademark/trademark.html
+++ b/src/trademark/trademark.html
@@ -60,6 +60,9 @@
                     They can be corporate logos, slogans, bands, or the brand name of a product.
                 </p>
                 &nbsp;
+                <a href="../games/wordsearch/WordSearch.html?type=trademark">
+                    <button type="button">WordSearch</button>
+                  </a>
                 <a href="../games/quiz/quiz.html?type=trademark">
                     <button type="button">Trademark Quiz</button>
                   </a>
