--- a/src/tradesecret/tradesecret.html
+++ b/src/tradesecret/tradesecret.html
@@ -57,6 +57,9 @@
           or recipe. Since it has not been patented, it has never been
           revealed.
         </p>
+        <a href="../games/wordsearch/WordSearch.html?type=tradesecret">
+          <button type="button">WordSearch</button>
+        </a>
         <a href="../games/quiz/quiz.html?type=tradesecret">
           <button type="button">Tradesecret Quiz</button>
         </a>
