--- a/src/patent/patent.html
+++ b/src/patent/patent.html
@@ -68,6 +68,9 @@
           of required resources. He sold it to a doctor who commercialised
           'the Coca Cola formula'.
         </p>
+        <a href="../games/wordsearch/WordSearch.html?type=patent">
+          <button type="button">WordSearch</button>
+        </a>
         <a href="../games/quiz/quiz.html?type=patent">
           <button type="button">Patent Quiz</button>
         </a>
