--- a/src/games/wordsearch/WordSearch.html
+++ b/src/games/wordsearch/WordSearch.html
@@ -22,11 +22,14 @@
 
 <body>
     <section id="topScreen">
-        <button id="return" onclick="returnToMain()">Exit</button>
+        <button id="return" onclick="returnToMain()">Finish</button>
         <div id="Timer" class="hide">Time Left: 40s</div>
         <script>
             function returnToMain() {
-                window.location.href = "../../homepage/homepage.html"
+                let mySolved = parseInt(localStorage.getItem("wordSearchScore")); 
+                let userEmail = localStorage.getItem("email");
+                console.log(mySolved);
+                updateUserScore(userEmail, mySolved);
             }
         </script>
     </section>
