New changes done

--- a/src/copyright/copyright.html
+++ b/src/copyright/copyright.html
@@ -67,7 +67,8 @@
 
         <div class="sliding-facts">
           <span class="nav-arrow" id="prev">&lt;</span>
-          <p id="fact">Fact 1: Copyright lasts the author's lifetime plus 70 years.</p>
+          <p id="fact">"Fact 1: The Statute of Anne, passed in England in 1710, was a milestone in the history of copyright law.
+            It recognized that all authors should be the primary beneficiaries of copyright law and established the idea that such copyrights should have only limited duration (then set at 28 years), after which works would pass into the public."</p>
           <span class="nav-arrow" id="next">&gt;</span>
         </div>
 
