--- a/src/scoreboard/scoreboard.html
+++ b/src/scoreboard/scoreboard.html
@@ -47,7 +47,7 @@
 
     <div class="leaderboard-container">
         <div class="leaderboard-box" id="quiz-board">
-            <h2>Quiz Trademark</h2>
+            <h2>Overall</h2>
             <table>
                 <thead>
                     <tr>
@@ -56,12 +56,12 @@
                         <th>Points</th>
                     </tr>
                 </thead>
-                <tbody id="quiz-trademark"></tbody>
+                <tbody id="overall"></tbody>
             </table>
         </div>
 
         <div class="leaderboard-box" id="quiz-board">
-            <h2>Quiz Tradesecret</h2>
+            <h2>Quiz</h2>
             <table>
                 <thead>
                     <tr>
@@ -70,7 +70,7 @@
                         <th>Points</th>
                     </tr>
                 </thead>
-                <tbody id="quiz-tradesecret"></tbody>
+                <tbody id="quiz"></tbody>
             </table>
         </div>
 
