Added Side dropdown menu to the homepage menubar

--- a/src/homepage/homepage.html
+++ b/src/homepage/homepage.html
@@ -27,11 +27,32 @@
           <div class="dropdown">
             <button class="dropbtn">Games</button>
             <div class="dropdown-content">
-              <a href="../games/quiz_trademark/tradesecret-quiz.html">Trademark Quiz</a>
-              <a href="../games/quiz/tradesecret-quiz.html">Trade Secret Quiz</a>
-              <a href="../games/logoquiz/logoGame.html">Guess the Logo</a>
-              <a href="../games/crossword/patent-crossword.html">Crossword</a>
-              <a href="../games/wordsearch/Copyright-wordsearch.html">Wordsearch</a>
+              <div class="dropdown-submenu">
+                <button class="subdropbtn">Quiz ▸</button>
+                <div class="submenu-content">
+                  <a href="../games/quiz_trademark/tradesecret-quiz.html">Trademark Quiz</a>
+                  <a href="../games/quiz/copyright-quiz.html">Copyright Quiz</a>
+                  <a href="../games/quiz/tradesecret-quiz.html">Trade Secret Quiz</a>
+                  <a href="../games/quiz/patent-quiz.html">Patent Quiz</a>
+                </div>
+              </div>
+              <div class="dropdown-submenu">
+                <button class="subdropbtn">Wordsearch ▸</button>
+                <div class="submenu-content">
+                  <a href="../games/wordsearch/trademark-wordsearch.html">Trademark Wordsearch</a>
+                  <a href="../games/wordsearch/copyright-wordsearch.html">Copyright Wordsearch</a>
+                  <a href="../games/wordsearch/tradesecret-wordsearch.html">Trade Secret Wordsearch</a>
+                  <a href="../games/wordsearch/patent-wordsearch.html">Patent Wordsearch</a>
+                </div>
+              </div>
+              <div class="dropdown-submenu">
+                <button class="subdropbtn">Crossword ▸</button>
+                <div class="submenu-content">
+                  <a href="../games/crossword/trademark-crossword.html">Trademark Crossword</a>
+                  <a href="../games/crossword/copyright-crossword.html">Copyright Crossword</a>
+                  <a href="../games/crossword/tradesecret-crossword.html">Trade Secret Crossword</a>
+                  <a href="../games/crossword/patent-crossword.html">Patent Crossword</a>
+                </div>
             </div>
           </div>
           <a class="btn1" href="../scoreboard/scoreboard.html">Leaderboard</a>
@@ -45,7 +66,8 @@
         <div class="col col1">
           <h1 class="ip-title"><span>Intellectual Property</span></h1>
           <p class="ip-desc">
-            Intellectual property is a category of property that includes intangible creations of the human intellect. The best-known types are patents, copyrights, trademarks, and trade secrets.
+            Intellectual property is a category of property that includes intangible creations of the human intellect.
+            The best-known types are patents, copyrights, trademarks, and trade secrets.
           </p>
         </div>
       </div>
