Small error fix for dropdown menu

--- a/src/homepage/homepage.html
+++ b/src/homepage/homepage.html
@@ -53,6 +53,7 @@
                   <a href="../games/crossword/tradesecret-crossword.html">Trade Secret Crossword</a>
                   <a href="../games/crossword/patent-crossword.html">Patent Crossword</a>
                 </div>
+              </div>
             </div>
           </div>
           <a class="btn1" href="../scoreboard/scoreboard.html">Leaderboard</a>
