--- a/src/homepage/homepage.html
+++ b/src/homepage/homepage.html
@@ -30,28 +30,28 @@
               <div class="dropdown-submenu">
                 <button class="subdropbtn">Quiz ▸</button>
                 <div class="submenu-content">
-                  <a href="../games/quiz_trademark/tradesecret-quiz.html">Trademark Quiz</a>
-                  <a href="../games/quiz/copyright-quiz.html">Copyright Quiz</a>
-                  <a href="../games/quiz/tradesecret-quiz.html">Trade Secret Quiz</a>
-                  <a href="../games/quiz/patent-quiz.html">Patent Quiz</a>
+                  <a href="../games/quiz/quiz.html?type=trademark">Trademark Quiz</a>
+                  <a href="../games/quiz/quiz.html?type=copyright">Copyright Quiz</a>
+                  <a href="../games/quiz/quiz.html?type=tradesecret">Trade Secret Quiz</a>
+                  <a href="../games/quiz/quiz.html?type=patent">Patent Quiz</a>
                 </div>
               </div>
               <div class="dropdown-submenu">
                 <button class="subdropbtn">Wordsearch ▸</button>
                 <div class="submenu-content">
-                  <a href="../games/wordsearch/trademark-wordsearch.html">Trademark Wordsearch</a>
-                  <a href="../games/wordsearch/copyright-wordsearch.html">Copyright Wordsearch</a>
-                  <a href="../games/wordsearch/tradesecret-wordsearch.html">Trade Secret Wordsearch</a>
-                  <a href="../games/wordsearch/patent-wordsearch.html">Patent Wordsearch</a>
+                  <a href="../games/wordsearch/WordSearch.html?type=trademark">Trademark Wordsearch</a>
+                  <a href="../games/wordsearch/WordSearch.html?type=copyright">Copyright Wordsearch</a>
+                  <a href="../games/wordsearch/WordSearch.html?type=tradesecret">Trade Secret Wordsearch</a>
+                  <a href="../games/wordsearch/WordSearch.html?type=patent">Patent Wordsearch</a>
                 </div>
               </div>
               <div class="dropdown-submenu">
                 <button class="subdropbtn">Crossword ▸</button>
                 <div class="submenu-content">
-                  <a href="../games/crossword/trademark-crossword.html">Trademark Crossword</a>
-                  <a href="../games/crossword/copyright-crossword.html">Copyright Crossword</a>
-                  <a href="../games/crossword/tradesecret-crossword.html">Trade Secret Crossword</a>
-                  <a href="../games/crossword/patent-crossword.html">Patent Crossword</a>
+                  <a href="../games/crossword/crossword.html?type=trademark">Trademark Crossword</a>
+                  <a href="../games/crossword/crossword.html?type=copyright">Copyright Crossword</a>
+                  <a href="../games/crossword/crossword.html?type=tradesecret">Trade Secret Crossword</a>
+                  <a href="../games/crossword/crossword.html?type=patent">Patent Crossword</a>
                 </div>
               </div>
             </div>
